# test-dependabot

./: pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: dependabot-reviewer.yml  notify.yaml
